Prevent line wrap on link hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -6848,9 +6848,10 @@ body {
         text-align: center; }
         #menus #primary-menu .navbar-nav .nav-item .nav-link {
           color: white;
-          font-size: 1em; }
-        #menus #primary-menu .navbar-nav .nav-item .nav-link:hover {
-          letter-spacing: 0.05em; }
+          font-size: 1em;
+          transition: .1s transform ease-in; }
+          #menus #primary-menu .navbar-nav .nav-item .nav-link:hover {
+            transform: scaleX(1.1); }
         #menus #primary-menu .navbar-nav .nav-item .dropdown-menu {
           background-color: inherit;
           box-shadow: none;
@@ -6859,10 +6860,11 @@ body {
           padding: 0; }
           #menus #primary-menu .navbar-nav .nav-item .dropdown-menu .dropdown-item {
             color: white !important;
-            text-align: center; }
-          #menus #primary-menu .navbar-nav .nav-item .dropdown-menu .dropdown-item:hover {
+            text-align: center;
             background-color: transparent !important;
-            letter-spacing: 0.05em; }
+            transition: .1s transform ease-in; }
+            #menus #primary-menu .navbar-nav .nav-item .dropdown-menu .dropdown-item:hover {
+              transform: scaleX(1.1); }
           #menus #primary-menu .navbar-nav .nav-item .dropdown-menu .dropdown-divider {
             display: none; } }
 @media screen and (max-width: 991px) and (orientation: portrait) {
@@ -6988,8 +6990,7 @@ body {
     display: block; }
     #homephotomobile a:hover, #homephotomobile a:focus {
       text-decoration: none;
-      letter-spacing: 0.06em;
-      transform: scale(1.1); }
+      transform: scaleX(1.1); }
 
 .agenda-posts a {
   transition: .5s; }
@@ -6997,12 +6998,13 @@ body {
   letter-spacing: 0.04em; }
 
 .actus-posts a i {
-  font-size: .8em;
-  text-indent: .5em; }
-  .actus-posts a i:hover {
-    text-indent: 1em; }
-  .actus-posts a i i:hover {
-    text-indent: 1em; }
+  transition: .1s padding ease-in;
+  text-indent: .5em;
+  padding-left: 0;
+  padding-right: .5em; }
+.actus-posts a:hover i {
+  padding-left: .5em;
+  padding-right: 0; }
 
 .font-weight-black {
   font-weight: 900 !important; }
